Problema con el fichero de configuración de puppetboard.

--- a/templates/settings.py.erb
+++ b/templates/settings.py.erb
@@ -1,5 +1,5 @@
 PUPPETDB_HOST = '<%= @puppetdb_host -%>'
-PUPPETDB_PORT = <%= @puppetdb_port -%>
+PUPPETDB_PORT = <%= @puppetdb_port %>
 PUPPETDB_SSL_VERIFY = True
 PUPPETDB_KEY = None
 PUPPETDB_CERT = None
